Fixed 'Gitflow actions are only available on repositories and projects'
- activated Gitflow sub-menu for IResource and selection adaptable to
  IResource.
- fixed GitFlowAdapterFactory#getAdapterList().
- made SelectionPropertyTester available on Collections and handle
  adaptations.
- simplified visibility and enablement tests in plugin.xml

Bug: 476821
Bug: 482430
Change-Id: I1b162615ba008a75590c07a54f165421935fa41b
Signed-off-by: Max Hohenegger <eclipse@hohenegger.eu>
Signed-off-by: Thomas Wolf <thomas.wolf@paranor.ch>

--- a/org.eclipse.egit.gitflow.ui/plugin.xml
+++ b/org.eclipse.egit.gitflow.ui/plugin.xml
@@ -22,20 +22,15 @@
 					style="push">
 				<visibleWhen
 						checkEnabled="false">
-					<iterate
-							ifEmpty="false"
-							operator="and">
-						<and>
-							<not>
-								<adapt type="org.eclipse.jgit.lib.Repository">
-									<test
-											forcePluginActivation="true"
-											property="GitFlowRepository.isInitialized">
-									</test>
-								</adapt>
-							</not>
-						</and>
-					</iterate>
+					<and>
+						<reference definitionId="org.eclipse.egit.gitflow.ui.commandEnabled" />
+						<not>
+							<test
+									forcePluginActivation="true"
+									property="GitFlowRepository.isInitialized">
+							</test>
+						</not>
+					</and>
 				</visibleWhen>
 			</command>
 		</menuContribution>
@@ -46,18 +41,10 @@
 					label="%TeamGitFlowMenu.name">
 				<visibleWhen
 						checkEnabled="false">
-					<iterate
-							ifEmpty="false"
-							operator="and">
-						<and>
-							<adapt type="org.eclipse.jgit.lib.Repository">
-								<test
-										forcePluginActivation="true"
-										property="GitFlowRepository.isInitialized">
-								</test>
-							</adapt>
-						</and>
-					</iterate>
+					<test
+							forcePluginActivation="true"
+							property="GitFlowRepository.isInitialized">
+					</test>
 				</visibleWhen>
 				<command
 						commandId="org.eclipse.egit.gitflow.ui.command.featureStart"
@@ -194,30 +181,10 @@
 					class="org.eclipse.egit.gitflow.ui.internal.actions.InitHandler">
 			</class>
 			<activeWhen>
-				<iterate>
-					<or>
-						<reference
-								definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
-						</reference>
-					</or>
-				</iterate>
+				<reference
+						definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
+				</reference>
 			</activeWhen>
-			<enabledWhen>
-				<iterate
-						ifEmpty="false"
-						operator="and">
-					<and>
-						<not>
-							<adapt type="org.eclipse.jgit.lib.Repository">
-								<test
-										forcePluginActivation="true"
-										property="GitFlowRepository.isInitialized">
-								</test>
-							</adapt>
-						</not>
-					</and>
-				</iterate>
-			</enabledWhen>
 		</handler>
 		<handler
 				commandId="org.eclipse.egit.gitflow.ui.command.featureStart">
@@ -225,27 +192,15 @@
 					class="org.eclipse.egit.gitflow.ui.internal.actions.FeatureStartHandler">
 			</class>
 			<activeWhen>
-				<iterate>
-					<or>
-						<reference
-								definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
-						</reference>
-					</or>
-				</iterate>
+				<reference
+						definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
+				</reference>
 			</activeWhen>
 			<enabledWhen>
-				<iterate
-						ifEmpty="false"
-						operator="and">
-					<and>
-						<adapt type="org.eclipse.jgit.lib.Repository">
-							<test
-									forcePluginActivation="true"
-									property="GitFlowRepository.isInitialized">
-							</test>
-						</adapt>
-					</and>
-				</iterate>
+				<test
+						forcePluginActivation="true"
+						property="GitFlowRepository.isInitialized">
+				</test>
 			</enabledWhen>
 		</handler>
 		<handler
@@ -254,28 +209,15 @@
 					class="org.eclipse.egit.gitflow.ui.internal.actions.FeatureFinishHandler">
 			</class>
 			<activeWhen>
-				<iterate>
-					<or>
-						<reference
-								definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
-						</reference>
-					</or>
-				</iterate>
+				<reference
+						definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
+				</reference>
 			</activeWhen>
 			<enabledWhen>
-				<iterate
-						ifEmpty="false"
-						operator="and">
-
-					<and>
-						<adapt type="org.eclipse.jgit.lib.Repository">
-							<test
-									forcePluginActivation="true"
-									property="GitFlowRepository.isFeature">
-							</test>
-						</adapt>
-					</and>
-				</iterate>
+				<test
+						forcePluginActivation="true"
+						property="GitFlowRepository.isFeature">
+				</test>
 			</enabledWhen>
 		</handler>
 		<handler
@@ -284,30 +226,15 @@
 					class="org.eclipse.egit.gitflow.ui.internal.actions.ReleaseStartHandler">
 			</class>
 			<activeWhen>
-				<iterate>
-					<or>
-						<instanceof
-								value="org.eclipse.jgit.revwalk.RevCommit">
-						</instanceof>
-						<reference
-								definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
-						</reference>
-					</or>
-				</iterate>
+				<reference
+						definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
+				</reference>
 			</activeWhen>
 			<enabledWhen>
-				<iterate
-						ifEmpty="false"
-						operator="and">
-					<and>
-						<adapt type="org.eclipse.jgit.lib.Repository">
-							<test
-									forcePluginActivation="true"
-									property="GitFlowRepository.isInitialized">
-							</test>
-						</adapt>
-					</and>
-				</iterate>
+				<test
+						forcePluginActivation="true"
+						property="GitFlowRepository.isInitialized">
+				</test>
 			</enabledWhen>
 		</handler>
 		<handler
@@ -316,27 +243,15 @@
 					class="org.eclipse.egit.gitflow.ui.internal.actions.ReleaseFinishHandler">
 			</class>
 			<activeWhen>
-				<iterate>
-					<or>
-						<reference
-								definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
-						</reference>
-					</or>
-				</iterate>
+				<reference
+						definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
+				</reference>
 			</activeWhen>
 			<enabledWhen>
-				<iterate
-						ifEmpty="false"
-						operator="and">
-					<and>
-						<adapt type="org.eclipse.jgit.lib.Repository">
-							<test
-									forcePluginActivation="true"
-									property="GitFlowRepository.isRelease">
-							</test>
-						</adapt>
-					</and>
-				</iterate>
+				<test
+						forcePluginActivation="true"
+						property="GitFlowRepository.isRelease">
+				</test>
 			</enabledWhen>
 		</handler>
 		<handler
@@ -346,31 +261,21 @@
 			</class>
 
 			<enabledWhen>
-				<iterate
-						ifEmpty="false"
-						operator="and">
-					<adapt type="org.eclipse.jgit.lib.Repository">
-						<and>
-							<test
-									forcePluginActivation="true"
-									property="GitFlowRepository.isFeature">
-							</test>
-							<test
-									forcePluginActivation="true"
-									property="GitFlowRepository.hasDefaultRemote">
-							</test>
-						</and>
-					</adapt>
-				</iterate>
+				<and>
+					<test
+							forcePluginActivation="true"
+							property="GitFlowRepository.isFeature">
+					</test>
+					<test
+							forcePluginActivation="true"
+							property="GitFlowRepository.hasDefaultRemote">
+					</test>
+				</and>
 			</enabledWhen>
 			<activeWhen>
-				<iterate>
-					<or>
-						<reference
-								definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
-						</reference>
-					</or>
-				</iterate>
+				<reference
+						definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
+				</reference>
 			</activeWhen>
 		</handler>
 		<handler
@@ -380,31 +285,21 @@
 			</class>
 
 			<enabledWhen>
-				<iterate
-						ifEmpty="false"
-						operator="and">
-					<adapt type="org.eclipse.jgit.lib.Repository">
-						<and>
-							<test
-									forcePluginActivation="true"
-									property="GitFlowRepository.isRelease">
-							</test>
-							<test
-									forcePluginActivation="true"
-									property="GitFlowRepository.hasDefaultRemote">
-							</test>
-						</and>
-					</adapt>
-				</iterate>
+				<and>
+					<test
+							forcePluginActivation="true"
+							property="GitFlowRepository.isRelease">
+					</test>
+					<test
+							forcePluginActivation="true"
+							property="GitFlowRepository.hasDefaultRemote">
+					</test>
+				</and>
 			</enabledWhen>
 			<activeWhen>
-				<iterate>
-					<or>
-						<reference
-								definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
-						</reference>
-					</or>
-				</iterate>
+				<reference
+						definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
+				</reference>
 			</activeWhen>
 		</handler>
 		<handler
@@ -414,31 +309,21 @@
 			</class>
 
 			<enabledWhen>
-				<iterate
-						ifEmpty="false"
-						operator="and">
-					<adapt type="org.eclipse.jgit.lib.Repository">
-						<and>
-							<test
-									forcePluginActivation="true"
-									property="GitFlowRepository.isHotfix">
-							</test>
-							<test
-									forcePluginActivation="true"
-									property="GitFlowRepository.hasDefaultRemote">
-							</test>
-						</and>
-					</adapt>
-				</iterate>
+				<and>
+					<test
+							forcePluginActivation="true"
+							property="GitFlowRepository.isHotfix">
+					</test>
+					<test
+							forcePluginActivation="true"
+							property="GitFlowRepository.hasDefaultRemote">
+					</test>
+				</and>
 			</enabledWhen>
 			<activeWhen>
-				<iterate>
-					<or>
-						<reference
-								definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
-						</reference>
-					</or>
-				</iterate>
+				<reference
+						definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
+				</reference>
 			</activeWhen>
 		</handler>
 		<handler
@@ -447,27 +332,15 @@
 					class="org.eclipse.egit.gitflow.ui.internal.actions.FeatureTrackHandler">
 			</class>
 			<activeWhen>
-				<iterate>
-					<or>
-						<reference
-								definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
-						</reference>
-					</or>
-				</iterate>
+				<reference
+						definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
+				</reference>
 			</activeWhen>
 			<enabledWhen>
-				<iterate
-						ifEmpty="false"
-						operator="and">
-					<adapt type="org.eclipse.jgit.lib.Repository">
-						<and>
-							<test
-									forcePluginActivation="true"
-									property="GitFlowRepository.hasDefaultRemote">
-							</test>
-						</and>
-					</adapt>
-				</iterate>
+				<test
+						forcePluginActivation="true"
+						property="GitFlowRepository.hasDefaultRemote">
+				</test>
 			</enabledWhen>
 		</handler>
 		<handler
@@ -476,27 +349,15 @@
 					class="org.eclipse.egit.gitflow.ui.internal.actions.FeatureCheckoutHandler">
 			</class>
 			<activeWhen>
-				<iterate>
-					<or>
-						<reference
-								definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
-						</reference>
-					</or>
-				</iterate>
+				<reference
+						definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
+				</reference>
 			</activeWhen>
 			<enabledWhen>
-				<iterate
-						ifEmpty="false"
-						operator="and">
-					<and>
-						<adapt type="org.eclipse.jgit.lib.Repository">
-							<test
-									forcePluginActivation="true"
-									property="GitFlowRepository.isInitialized">
-							</test>
-						</adapt>
-					</and>
-				</iterate>
+				<test
+						forcePluginActivation="true"
+						property="GitFlowRepository.isInitialized">
+				</test>
 			</enabledWhen>
 		</handler>
 		<handler
@@ -505,27 +366,15 @@
 					class="org.eclipse.egit.gitflow.ui.internal.actions.FeatureRebaseHandler">
 			</class>
 			<activeWhen>
-				<iterate>
-					<or>
-						<reference
-								definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
-						</reference>
-					</or>
-				</iterate>
+				<reference
+						definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
+				</reference>
 			</activeWhen>
 			<enabledWhen>
-				<iterate
-						ifEmpty="false"
-						operator="and">
-					<adapt type="org.eclipse.jgit.lib.Repository">
-						<and>
-							<test
-									forcePluginActivation="true"
-									property="GitFlowRepository.isFeature">
-							</test>
-						</and>
-					</adapt>
-				</iterate>
+				<test
+						forcePluginActivation="true"
+						property="GitFlowRepository.isFeature">
+				</test>
 			</enabledWhen>
 		</handler>
 		<handler
@@ -534,27 +383,15 @@
 					class="org.eclipse.egit.gitflow.ui.internal.actions.HotfixStartHandler">
 			</class>
 			<activeWhen>
-				<iterate>
-					<or>
-						<reference
-								definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
-						</reference>
-					</or>
-				</iterate>
+				<reference
+						definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
+				</reference>
 			</activeWhen>
 			<enabledWhen>
-				<iterate
-						ifEmpty="false"
-						operator="and">
-					<adapt type="org.eclipse.jgit.lib.Repository">
-						<and>
-							<test
-									forcePluginActivation="true"
-									property="GitFlowRepository.isInitialized">
-							</test>
-						</and>
-					</adapt>
-				</iterate>
+				<test
+						forcePluginActivation="true"
+						property="GitFlowRepository.isInitialized">
+				</test>
 			</enabledWhen>
 		</handler>
 		<handler
@@ -563,27 +400,15 @@
 					class="org.eclipse.egit.gitflow.ui.internal.actions.HotfixFinishHandler">
 			</class>
 			<activeWhen>
-				<iterate>
-					<or>
-						<reference
-								definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
-						</reference>
-					</or>
-				</iterate>
+				<reference
+						definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
+				</reference>
 			</activeWhen>
 			<enabledWhen>
-				<iterate
-						ifEmpty="false"
-						operator="and">
-					<adapt type="org.eclipse.jgit.lib.Repository">
-						<and>
-							<test
-									forcePluginActivation="true"
-									property="GitFlowRepository.isHotfix">
-							</test>
-						</and>
-					</adapt>
-				</iterate>
+				<test
+						forcePluginActivation="true"
+						property="GitFlowRepository.isHotfix">
+				</test>
 			</enabledWhen>
 		</handler>
 	</extension>
@@ -594,7 +419,7 @@
 				id="org.eclipse.egit.gitflow.ui.propertyTester"
 				namespace="GitFlowRepository"
 				properties="isFeature,isRelease,isHotfix,isDevelop,isMaster,isInitialized,hasDefaultRemote"
-				type="org.eclipse.jgit.lib.Repository">
+				type="java.util.Collection">
 		</propertyTester>
 	</extension>
 
@@ -603,12 +428,26 @@
 		<definition
 				id="org.eclipse.egit.gitflow.ui.commandEnabled">
 			<or>
-				<instanceof
-						value="org.eclipse.egit.ui.internal.repository.tree.RepositoryTreeNode">
-				</instanceof>
-				<instanceof
-						value="org.eclipse.core.resources.IResource">
-				</instanceof>
+				<reference
+						definitionId="org.eclipse.egit.ui.resourcesSingleRepository">
+				</reference>
+				<and>
+					<count
+							value="1">
+					</count>
+					<iterate>
+						<and>
+							<instanceof
+									value="org.eclipse.egit.ui.internal.repository.tree.RepositoryTreeNode">
+							</instanceof>
+							<not>
+								<test
+										property="GitRepository.isBare">
+								</test>
+							</not>
+						</and>
+					</iterate>
+				</and>
 			</or>
 		</definition>
 	</extension>
@@ -626,7 +465,13 @@
 			<adapter type="org.eclipse.jgit.lib.Repository"/>
 		</factory>
 	</extension>
-
+	<extension
+			point="org.eclipse.core.runtime.adapters">
+		<factory adaptableType="org.eclipse.jface.viewers.ISelection"
+				class="org.eclipse.egit.gitflow.ui.internal.factories.GitFlowAdapterFactory">
+			<adapter type="org.eclipse.jgit.lib.Repository"/>
+		</factory>
+	</extension>
 
 	<extension
 			point="org.eclipse.ui.menus">
@@ -637,21 +482,13 @@
 					label="%TeamGitFlowMenu.name">
 				<visibleWhen
 						checkEnabled="false">
-					<iterate
-							ifEmpty="false"
-							operator="and">
-						<and>
-							<instanceof
-									value="org.eclipse.core.resources.IProject">
-							</instanceof>
-							<adapt type="org.eclipse.jgit.lib.Repository">
-								<test
-										forcePluginActivation="true"
-										property="GitFlowRepository.isInitialized">
-								</test>
-							</adapt>
-						</and>
-					</iterate>
+					<and>
+						<reference definitionId="org.eclipse.egit.ui.resourcesSingleRepository" />
+						<test
+								forcePluginActivation="true"
+								property="GitFlowRepository.isInitialized">
+						</test>
+					</and>
 				</visibleWhen>
 				<command
 						commandId="org.eclipse.egit.gitflow.ui.command.featureStart"
@@ -732,23 +569,15 @@
 					style="push">
 				<visibleWhen
 						checkEnabled="false">
-					<iterate
-							ifEmpty="false"
-							operator="and">
-						<and>
-							<instanceof
-									value="org.eclipse.core.resources.IProject">
-							</instanceof>
-							<not>
-								<adapt type="org.eclipse.jgit.lib.Repository">
-									<test
-											forcePluginActivation="true"
-											property="GitFlowRepository.isInitialized">
-									</test>
-								</adapt>
-							</not>
-						</and>
-					</iterate>
+					<and>
+						<reference definitionId="org.eclipse.egit.ui.resourcesSingleRepository" />
+						<not>
+							<test
+									forcePluginActivation="true"
+									property="GitFlowRepository.isInitialized">
+							</test>
+						</not>
+					</and>
 				</visibleWhen>
 			</command>
 		</menuContribution>
