--- a/org.eclipse.egit.core/pom.xml
+++ b/org.eclipse.egit.core/pom.xml
@@ -17,7 +17,7 @@
   <parent>
     <groupId>org.eclipse.egit</groupId>
     <artifactId>egit-parent</artifactId>
-    <version>4.1.1-SNAPSHOT</version>
+    <version>4.1.1.201511131810-r</version>
   </parent>
 
   <artifactId>org.eclipse.egit.core</artifactId>
