Allow to open external files in the editor directly from Staging view
For whatever reason Staging view has a menu called "Open Workspace
Version", which is disabled on files outside the workspace. All other
viewers don't care if the file is inside or outside the workspace and
open the requested file in editor. Staging view should just do the same.
There is no reason to restrict opening files to the workspace located
only.

Funny enough, even if the other viewers were allowing opening of
external files, they reused the menu text from the Staging view. Changed
the menu to "Open Working Tree Version" to be consistent what it really
does.

Change-Id: I553565d36d1ed97eb9399c69ac555117724977b2
Signed-off-by: Andrey Loskutov <loskutov@gmx.de>

--- a/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
+++ b/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
@@ -1510,7 +1510,7 @@ CommitFileDiffViewer_MergeCommitMultiAncestorMessage=This is a merge commit with
 CommitFileDiffViewer_notContainedInCommit=File {0} is not contained in commit {1}
 CommitFileDiffViewer_OpenInEditorMenuLabel=Open &This Version
 CommitFileDiffViewer_OpenPreviousInEditorMenuLabel=Open &Previous Version
-CommitFileDiffViewer_OpenWorkingTreeVersionInEditorMenuLabel=&Open Workspace Version
+CommitFileDiffViewer_OpenWorkingTreeVersionInEditorMenuLabel=&Open Working Tree Version
 StagingView_CompareWithIndexMenuLabel=Compare with Index
 CommitFileDiffViewer_ShowAnnotationsMenuLabel=&Show Annotations
 CommitFileDiffViewer_ShowInHistoryLabel=Focus On This File
