Change label in context menu on staged StagingEntry
Correct is "Compare with Working Tree", not "Compare with Index".

Bug: 481684
Change-Id: I14626cf41b4b319c6cded5923ef791b1beb04790
Signed-off-by: Thomas Wolf <thomas.wolf@paranor.ch>

--- a/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
+++ b/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
@@ -1504,7 +1504,7 @@ MultiPullResultDialog_WindowTitle=Pull Result for Multiple Repositories
 
 CommitFileDiffViewer_CanNotOpenCompareEditorTitle=Cannot Open Compare Editor
 CommitFileDiffViewer_CompareMenuLabel=Compare with Previous &Version
-CommitFileDiffViewer_CompareWorkingDirectoryMenuLabel=Compare with &Workspace
+CommitFileDiffViewer_CompareWorkingDirectoryMenuLabel=Compare with &Working Tree
 CommitFileDiffViewer_FileDoesNotExist=File {0} does not exist in the workspace
 CommitFileDiffViewer_MergeCommitMultiAncestorMessage=This is a merge commit with more than one ancestor
 CommitFileDiffViewer_notContainedInCommit=File {0} is not contained in commit {1}
